[package]
name = "tdtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0"
derive_more = "0"
rand = { version = "0" }
rand_chacha = { version = "0" }
base64 = "0"
regex = "1"
ansible-vault = "0"
serde = "1.0"
serde_yaml = "0"
serde_json = "1"
oauth2 = "4"
url = "2"
open = "3"
octocrab = "0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "cargo", "string"] }
clap-serde-derive = "0.2.0"
toml = "0.7.1"
dirs = "4.0.0"
