[package]
name = "tdtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansible-vault = "0"
anyhow = "1.0"
base64 = "0"
clap = { version = "4", features = ["derive", "cargo", "string"] }
clap-serde-derive = "0.2.0"
derive_more = "0"
dirs = "4.0.0"
inquire = "0"
oauth2 = "4"
octocrab = "0"
open = "3"
rand = { version = "0" }
rand_chacha = { version = "0" }
regex = "1"
serde = "1.0"
serde_json = "1"
serde_yaml = "0"
tokio = { version = "1", features = ["full"] }
toml = "0.7.1"
url = "2"
