[package]
name = "tdtk"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansible-vault = "0.2.1"
anyhow = "1.0.69"
base64 = "0.21.0"
clap = { version = "4.1.4", features = ["derive", "cargo", "string"] }
clap-serde-derive = "0.2.0"
derive_more = { version = "0.99.17", features = ["display"] }
dirs = "4.0.0"
inquire = "0.5.3"
oauth2 = "4.3.0"
octocrab = "0.18.1"
open = "3.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
jsonschema = "0.16.1"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
url = "2"
